[package]
authors = ["Chevdor <chevdor@gmail.com>"]
name = "yamlcheck"
version = "0.1.0"
edition = "2021"
description = "yamlcheck is a cli"
homepage = "https://github.com/Chevdor/yamlcheck"
keywords = ["Chevdor"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Chevdor/yamlcheck"

[dependencies]
assert_cmd = "2.0"
env_logger = "0.10"
log = "0.4"
clap = { version = "4", features = ["derive", "env", "unicode", "cargo"] }
serde_json = "1.0"
valico = { version = "4.0.0-rc.0", git ="https://github.com/s-panferov/valico", branch = "master", features = ["js"] }
serde_yaml = "0.9"
exitcode = "1.1"
